# gpt-playground

jax/: .gitignore  gpt-infer.py  gpt-jax.py  jax-test.ipynb  pyproject.toml
pytorch/: .gitignore  bigram.py  gpt-improved.py  gpt-improved2.py  gpt-infer2.py  gpt-inference.py  gpt.py  gqa.ipynb  pyproject.toml  rope.ipynb  v1.ipynb  v2.ipynb
pytorch/small_LM/: gpt-improved2.py  model.py
pytorch/triton-kernels/: vector_add.ipynb
