[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "wandb>=0.24.2",
]
